--- a/packages/example/src/pages/getting-started/index.mdx
+++ b/packages/example/src/pages/getting-started/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Getting started
+title: Getting started - IBM Services XG
 description: Quick start guide for getting acclimated with gatsby-theme-carbon
 ---
 
